syntax = "proto3";
package racing;

import "google/protobuf/timestamp.proto";

service Racing {
  // ListRaces will return a collection of all races.
  rpc ListRaces(ListRacesRequest) returns (ListRacesResponse) {}
  // TASK5: GetRace will return a single race from its id
  rpc GetRace(GetRaceRequest) returns (GetRaceResponse) {}
}

/* Views */

enum RaceView {
    // The default value. Since the default behaviour is not specified in
    // the task sheet, set it to the basic setting. 
    RACE_VIEW_UNSPECIFIED = 0;

    // Only include the race name and number in the response.
    BASIC = 1;

    // Include Everything.
    FULL = 2;
}

/* Requests/Responses */

message GetRaceRequest {
  int64 id = 1;
  RaceView view = 2;
}

// Response to GetRace call.
message GetRaceResponse {
  Race race = 1;
}

message ListRacesRequest {
  ListRacesRequestFilter filter = 1;
  RaceView view = 2;
}

// Response to ListRaces call.
message ListRacesResponse {
  repeated Race races = 1;
}

// Filter for listing races.
message ListRacesRequestFilter {
  repeated int64 meeting_ids = 1;
  // TASK1: Add bool to determine whether to filter visible races
  bool filter_visible_races = 2;
}

/* Resources */

// A race resource.
message Race {
  // ID represents a unique identifier for the race.
  int64 id = 1;
  // MeetingID represents a unique identifier for the races meeting.
  int64 meeting_id = 2;
  // Name is the official name given to the race.
  string name = 3;
  // Number represents the number of the race.
  int64 number = 4;
  // Visible represents whether or not the race is visible.
  bool visible = 5;
  // AdvertisedStartTime is the time the race is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 6;
  // TASK3: Adding status of the race
  string status = 7;
}

